--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "react-dom": "^0.14.3"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
     "gulp": "^3.9.0",
     "gulp-html-replace": "^1.5.5",
     "gulp-streamify": "^1.0.2",
-    "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.1"
   }
