--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "browserify": "^12.0.1",
     "gulp": "^3.9.0",
     "gulp-html-replace": "^1.5.5",
+    "gulp-sass": "^2.1.0",
     "gulp-streamify": "^1.0.2",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.1"
