--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-react": "^6.1.18",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
+    "classnames": "^2.2.1",
     "gulp": "^3.9.0",
     "gulp-html-replace": "^1.5.5",
     "gulp-sass": "^2.1.0",
